add LAYERSERIES_COMPAT_laird-cp for thud

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,3 +8,4 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "laird-cp"
 BBFILE_PATTERN_laird-cp = "^${LAYERDIR}/"
 BBFILE_PRIORITY_laird-cp = "8"
+LAYERSERIES_COMPAT_meta-laird-cp = "thud"
