--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,3 +8,5 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "laird-cp"
 BBFILE_PATTERN_laird-cp = "^${LAYERDIR}/"
 BBFILE_PRIORITY_laird-cp = "8"
+
+BB_DANGLINGAPPENDS_WARNONLY = "1"
