--- a/meta-summit-radio/conf/layer.conf
+++ b/meta-summit-radio/conf/layer.conf
@@ -10,3 +10,5 @@ BBFILE_PATTERN_summit-radio = "^${LAYERDIR}/"
 BBFILE_PRIORITY_summit-radio = "8"
 
 BB_DANGLINGAPPENDS_WARNONLY = "1"
+
+PREMIRRORS:prepend = "https://github.com/LairdCP/Sterling-LWB-and-LWB5-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n"
