meta-summit-radio: Add LAYERSERIES_COMPAT
Add all supported Yocto versions to the layer.conf. According to the
documentation, LAYERSERIES_COMPAT is required for yocto layer
compatibility:
https://docs.yoctoproject.org/bitbake/2.4/bitbake-user-manual/bitbake-user-manual-ref-variables.html#term-LAYERSERIES_COMPAT

Signed-off-by: Stefan Müller-Klieser <s.mueller-klieser@phytec.de>

--- a/meta-summit-radio/conf/layer.conf
+++ b/meta-summit-radio/conf/layer.conf
@@ -9,6 +9,8 @@ BBFILE_COLLECTIONS += "summit-radio"
 BBFILE_PATTERN_summit-radio = "^${LAYERDIR}/"
 BBFILE_PRIORITY_summit-radio = "8"
 
+LAYERSERIES_COMPAT_summit-radio = "honister kirkstone langdale mickledore"
+
 BB_DANGLINGAPPENDS_WARNONLY = "1"
 
 PREMIRRORS:prepend = "https://github.com/LairdCP/Sterling-LWB-and-LWB5-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n"
