Added LAYERSERIES_COMPAT to summit-radio-pre-3.4
This list will not change ever, since it is for legacy releases
so no harm adding LAYERSERIES_COMPAT

--- a/meta-summit-radio-pre-3.4/conf/layer.conf
+++ b/meta-summit-radio-pre-3.4/conf/layer.conf
@@ -9,4 +9,6 @@ BBFILE_COLLECTIONS += "summit-radio-pre-3.4"
 BBFILE_PATTERN_summit-radio-pre-3.4 = "^${LAYERDIR}/"
 BBFILE_PRIORITY_summit-radio-pre-3.4 = "8"
 
+LAYERSERIES_COMPAT_summit-radio-pre-3.4 = "sumo thud warrior zeus dunfell gategarth hardknott"
+
 BB_DANGLINGAPPENDS_WARNONLY = "1"
