Removed SUMMIT_URI_LOCAL and adjusted layers to support

--- a/meta-summit-radio/conf/layer.conf
+++ b/meta-summit-radio/conf/layer.conf
@@ -11,4 +11,7 @@ BBFILE_PRIORITY_summit-radio = "8"
 
 BB_DANGLINGAPPENDS_WARNONLY = "1"
 
-PREMIRRORS:prepend = "https://github.com/LairdCP/Sterling-LWB-and-LWB5-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n"
+PREMIRRORS:prepend = "\
+	https://github.com/LairdCP/Sterling-60-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
+	https://github.com/LairdCP/Sterling-LWB-and-LWB5-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
+	"
