--- a/meta-summit-radio-pre-3.4/conf/layer.conf
+++ b/meta-summit-radio-pre-3.4/conf/layer.conf
@@ -12,3 +12,8 @@ BBFILE_PRIORITY_summit-radio-pre-3.4 = "8"
 LAYERSERIES_COMPAT_summit-radio-pre-3.4 = "sumo thud warrior zeus dunfell gategarth hardknott"
 
 BB_DANGLINGAPPENDS_WARNONLY = "1"
+
+PREMIRRORS_prepend = "\
+	https://github.com/LairdCP/Sterling-60-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
+	https://github.com/LairdCP/Sterling-LWB-and-LWB5-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
+	"
