Update nx61x recipes and tools
PROD-6234

--- a/meta-summit-radio-pre-3.4/conf/layer.conf
+++ b/meta-summit-radio-pre-3.4/conf/layer.conf
@@ -16,4 +16,5 @@ BB_DANGLINGAPPENDS_WARNONLY = "1"
 PREMIRRORS_prepend = "\
 	https://github.com/LairdCP/Sterling-60-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
 	https://github.com/LairdCP/Sterling-LWB-and-LWB5-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
+	https://github.com/LairdCP/SonaNX-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
 	"
