--- a/meta-summit-radio/conf/layer.conf
+++ b/meta-summit-radio/conf/layer.conf
@@ -14,4 +14,5 @@ BB_DANGLINGAPPENDS_WARNONLY = "1"
 PREMIRRORS:prepend = "\
 	https://github.com/LairdCP/Sterling-60-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
 	https://github.com/LairdCP/Sterling-LWB-and-LWB5-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
+	https://github.com/LairdCP/SonaNX-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
 	"
