--- a/meta-summit-radio-pre-3.4/conf/layer.conf
+++ b/meta-summit-radio-pre-3.4/conf/layer.conf
@@ -17,4 +17,5 @@ PREMIRRORS_prepend = "\
 	https://github.com/LairdCP/Sterling-60-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
 	https://github.com/LairdCP/Sterling-LWB-and-LWB5-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
 	https://github.com/LairdCP/SonaNX-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
+	https://github.com/LairdCP/SonaTI-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
 	"
