Add fileshare auth support and other improvements

--- a/meta-summit-radio-pre-3.4/conf/layer.conf
+++ b/meta-summit-radio-pre-3.4/conf/layer.conf
@@ -9,6 +9,8 @@ BBFILE_COLLECTIONS += "summit-radio-pre-3.4"
 BBFILE_PATTERN_summit-radio-pre-3.4 = "^${LAYERDIR}/"
 BBFILE_PRIORITY_summit-radio-pre-3.4 = "8"
 
+RFPROS_FILESHARE_AUTH ?= ""
+
 LAYERSERIES_COMPAT_summit-radio-pre-3.4 = "sumo thud warrior zeus dunfell gategarth hardknott"
 
 BB_DANGLINGAPPENDS_WARNONLY = "1"
