--- a/meta-summit-radio/conf/layer.conf
+++ b/meta-summit-radio/conf/layer.conf
@@ -11,6 +11,8 @@ BBFILE_PRIORITY_summit-radio = "8"
 
 BB_DANGLINGAPPENDS_WARNONLY = "1"
 
+RFPROS_FILESHARE_AUTH ?= ""
+
 PREMIRRORS:prepend = "\
 	https://github.com/LairdCP/Sterling-60-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
 	https://github.com/LairdCP/Sterling-LWB-and-LWB5-Release-Packages/releases/download/.*/.*     file://${TOPDIR}/../release \n\
